objects/Sales_Agent__c.object
<CustomObject>
    <description>JTK 02/24/2015 - New custom object created to allow users to add multiple Sales Agents associated to an Opportunity.</description>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <label>Approver Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lane Lobaugh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <formula>Commission__c  * Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fee_Approval_Date__c</fullName>
        <label>Fee Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Commission_Amount__c</fullName>
        <description>When the total Commission amount is available versus a percentage</description>
        <label>Manual Commission Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Agents</relationshipLabel>
        <relationshipName>Sales_Agents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Agent_Account__c</fullName>
        <formula>Sales_Agent_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Agent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Agent_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Agent Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Agents</relationshipLabel>
        <relationshipName>Sales_Agents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Sales Agent</label>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>Sales Agent ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Agents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>